--- a/FrondEnd/package.json
+++ b/FrondEnd/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.36.1"
   }
